2005-11-25  Michael Snyder  <msnyder@redhat.com>

	* linux-nat.c (restart_auto_finish): New set/show variable.
	(restart_command): Automatically do "finish" a few times
	on request.

	* infrun.c (set_last_target_status): Remove, replace with following.
	(nullify_last_target_wait_ptid): New function.  Now we don't need
	to save this bit of state in linux-nat.

	* linux-nat.c (struct fork_info): Get rid of last_target_ptid, 
	last_target_waitstatus, and inferior status.
	(fork_load_infrun_state): Forget about infrun status and target
	wait ptid.  Call nullify_last_target_wait_ptid instead.
	(fork_save_infrun_state): Forget about infrun status and target
	wait ptid.
	(free_fork): Forget about infrun status.
	(detach_fork_command): Output cleanup.

	* linux-nat.c (child_follow_fork): Add verbose messages when
	detaching from parent or child (to match HPUX tests in testsuite).

2005-11-23  Michael Snyder  <msnyder@redhat.com>

	* linux-nat.c: Adapt fork list to work with follow_fork.

	(child_follow_fork): Add non-detached fork to fork list.
	Handle follow-child as well as follow-parent.
	(fork_load_infrun_state, fork_save_infrun_state):
	Don't save any actual infrun state except for last_ptid.
	Just save registers, and add the option of NOT restoring them.
	Also don't leak regcache objects.
	(add_fork): Accept a pid instead of a ptid.
	(find_fork_pid): New function.
	(pid_to_fork_id): Delete function.
	(detach_fork_command): New command.
	(checkpoint_command): Remember previous setting of detach_fork.
	Don't call add_fork, it's now done by child_follow_fork.
	FIXME get rid of call to target_fetch_registers.
	(checkpoint_init): Add setshow detach-on-fork.
	Add detach-fork.

2005-11-21  Michael Snyder  <msnyder@redhat.com>

	* linux-nat.c: Add crude checkpoint/restart using forks.

	(child_follow_fork): Put a conditional around PTRACE_DETACH.
	FIXME needs to be done in the parent branch too.
	(__initialize_linux_nat): Call checkpoint_init.